# AI-Sys

./: .gitignore  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/education_ai_system/api/: content_routes.py  docx_conversion_routes.py  embeddings_routes.py  evaluation_routes.py
src/education_ai_system/config/: predefined_input.yaml
src/education_ai_system/config/prompts/: evaluation.yaml  lesson_notes.yaml  lesson_plan.yaml  scheme_of_work.yaml
src/education_ai_system/data_processing/: metadata_extractor.py  pdf_extractor.py
src/education_ai_system/embeddings/: pinecone_manager.py
src/education_ai_system/services/: evaluation_service.py  generators.py  pinecone_service.py
src/education_ai_system/tools/: pinecone_exa_tools.py
src/education_ai_system/utils/: file_operations.py  session_manager.py  supabase_manager.py  validators.py
temp_docs/: scheme_20250526123256.docx  scheme_20250526123309.docx
