[tool.poetry]
name = "curriculum-builder"
version = "1.0.0"
description = "Nigerian Curriculum Content Generator"
authors = ["Francis-Alfred Michaelangelo"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.0"
pinecone-client = "3.2.2"
transformers = "^4.41.2"
torch = {version = "^2.3.0", source = "pytorch"}
torchvision = { version = "0.15.2", source = "pytorch" }
langchain-openai = "^0.1.7"
exa-py = "^1.6.0"
python-docx = "^1.1.0"
pdfplumber = "^0.11.0"
pydantic = "^2.7.1"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
pyyaml = "^6.0.1"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.0.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"